# Web-Server-CS130

./: .gitignore  CMakeLists.txt  README
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: bad_handler.h  config_parser.h  dispatcher.h  echo_handler.h  error_handler.h  handler_manager.h  health_handler.h  meme_handler.h  proxy_handler.h  request.h  request_handler.h  response.h  server.h  session.h  static_handler.h  status_handler.h  status_obj.h  url_parser.h
memes_r_us/: create.html  delete.html  edit.html  list.html  result.html  view.html
memes_r_us/css_help/css/lib/control/: iconselect.css
src/: bad_handler.cc  config_parser.cc  dispatcher.cc  echo_handler.cc  error_handler.cc  handler_manager.cc  health_handler.cc  meme_handler.cc  proxy_handler.cc  request.cc  response.cc  server.cc  server_main.cc  session.cc  static_handler.cc  status_handler.cc  status_obj.cc  url_parser.cc
static/static_files1/: Book1.csv  javascript_file.js
static_files1/: excel.xlsx  index_htm.htm  msword.doc  text.txt  welcome2.tif
tests/: bad_handler_test.cc  config_parser_test.cc  dispatcher_test.cc  echo_handler_test.cc  error_handler_test.cc  handler_manager_test.cc  health_handler_test.cc  integration_mult_2.sh  integration_test.sh  integration_test_multi.sh  integration_test_response  meme_handler_test.cc  meme_test.py  multithread_test.py  proxy_handler_test.cc  request_test.cc  response_test.cc  server_test.cc  session_test.cc  static_handler_test.cc  status_handler_test.cc  status_obj_test.cc
tests/configs/: bad_config.txt  bad_meme_config  echo_server_config  example_config  full_config  full_config2  meme_config  no_port_config  python_server_config  single_server_config  static_config
tests/integration/: integration_expected_response  integration_expected_response2  integration_expected_response3  integration_proxy_expected  integration_test_config  integration_test_config_test_1  integration_test_config_test_2  integration_test_response2  integration_test_response3
tests/meme_handler_tests/: create_test  del_request  del_request2  del_request3  edit_post_req  edit_request  post_request  post_request2  post_request3  post_request4
tests/prac_requests/: prac_request  prac_request3  test
tests/static_handler_tests/: css_request  csv_request  doc_request  excel_request  gif_request  htm_request  html_request  invalid_request  jpeg_request  jpg_request  js_request  json_request  pdf_request  png_request  rtf_request  tif_request  txt_request  xml_request  zip_request
